--- a/package.json
+++ b/package.json
@@ -1,36 +1,41 @@
 {
   "name": "jugglingdb-mysql",
-  "version": "0.1.1",
+  "version": "0.0.12",
   "description": "MySQL adapter for JugglingDB",
   "main": "index.js",
   "scripts": {
     "test": "make test"
   },
   "dependencies": {
-    "jugglingdb": "^1.0.2",
+    "jugglingdb": ">= 0.3.0",
     "mysql": ">= 2.0.0-alpha3",
-    "uuid": "^2.0.1"
+    "should": "~3.0.1",
+    "coffee-script": "~1.6.3",
+    "semicov": "~0.1.1-2"
   },
   "devDependencies": {
-    "semicov": "~0.1.1-2",
-    "mocha": "^2.4.3",
-    "should": "~3.0.1",
-    "coffee-script": "latest"
+    "coffee-script": "latest",
+    "should": "~1.2.2",
+    "mocha": "~1.8.2",
+    "semicov": "*"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/jugglingdb/mysql-adapter.git"
   },
-  "author": "Anatoliy Chakkaev <mail@anatoliy.in>",
+  "author": {
+    "name": "Anatoliy Chakkaev",
+    "email": "mail@anatoliy.in"
+  },
   "maintainers": [
     {
-      "name": "dgsan",
-      "url": "https://github.com/dgsan"
-    },
-    {
-      "name": "Anatoliy Chakkaev",
-      "url": "https://github.com/1602"
+      "name": "anatoliy",
+      "email": "mail@anatoliy.in"
     }
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/jugglingdb/mysql-adapter/issues"
+  },
+  "homepage": "https://github.com/jugglingdb/mysql-adapter"
 }
