--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "jugglingdb-mysql",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "MySQL adapter for JugglingDB",
   "main": "index.js",
   "scripts": {
     "test": "make test"
   },
   "dependencies": {
-    "jugglingdb": "^1.0.2",
+    "jugglingdb": "2.0.0-rc4",
     "mysql": ">= 2.0.0-alpha3",
     "uuid": "^2.0.1"
   },
