--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "MySQL adapter for JugglingDB",
   "main": "index.js",
   "scripts": {
-    "test": "make test"
+    "test": "make test",
+    "test-coverage": "istanbul cover node_modules/.bin/_mocha -- -R landing",
+    "coverage-report": "export COVERALLS_GIT_COMMIT=`git rev-parse HEAD` && cat ./coverage/lcov.info | coveralls"
   },
   "dependencies": {
     "jugglingdb": "2.0.0-rc4",
