--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "make test",
-    "test-coverage": "istanbul cover node_modules/.bin/_mocha -- -R landing",
-    "coverage-report": "export COVERALLS_GIT_COMMIT=`git rev-parse HEAD` && cat ./coverage/lcov.info | coveralls"
+    "test-coverage": "istanbul cover node_modules/.bin/_mocha -- --reporter landing --no-exit --check-leaks test/",
+    "test-ci": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --reporter spec --check-leaks test/"
   },
   "dependencies": {
-    "jugglingdb": "2.0.0-rc4",
+    "jugglingdb": "2.0.0-rc5",
     "mysql": ">= 2.0.0-alpha3",
     "uuid": "^2.0.1"
   },
   "devDependencies": {
-    "semicov": "~0.1.1-2",
+    "coffee-script": "latest",
+    "istanbul": "^0.4.4",
     "mocha": "^2.4.3",
-    "should": "~3.0.1",
-    "coffee-script": "latest"
+    "semicov": "~0.1.1-2",
+    "should": "~3.0.1"
   },
   "repository": {
     "type": "git",
