--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "jugglingdb": "2.0.0-rc5",
-    "mysql": ">= 2.0.0-alpha3",
+    "mysql": "^2.2.0",
     "uuid": "^2.0.1"
   },
   "devDependencies": {
