--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "make test",
-    "test-coverage": "istanbul cover node_modules/.bin/_mocha -- --reporter landing --no-exit --check-leaks test/",
+    "test-coverage": "istanbul cover node_modules/.bin/_mocha -- --reporter landing --check-leaks test/",
     "test-ci": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --reporter spec --check-leaks test/"
   },
   "dependencies": {
-    "jugglingdb": "2.0.0-rc5",
+    "jugglingdb": "2.0.0-rc6",
     "mysql": "^2.2.0",
     "uuid": "^2.0.1"
   },
