--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,8 @@
 machine:
   node:
-    version: 4.4.7
+    version: 6.3.0
 
 test:
   override:
-    - npm run test-ci
+    - nvm use 6.3.0 && npm run test-ci
     - npm i coveralls && export COVERALLS_GIT_COMMIT=`git rev-parse HEAD` && cat ./coverage/lcov.info | coveralls
