--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "coffee-script": "latest",
     "eslint": "^3.1.0",
+    "eslint-config-1602": "^1.0.0",
     "expect": "^1.20.2",
     "istanbul": "^0.4.4",
     "mocha": "^2.4.3",
