Run eslint as part of the build

--- a/circle.yml
+++ b/circle.yml
@@ -8,5 +8,6 @@ database:
 
 test:
   override:
+    - npm run lint
     - nvm use 6.3.0 && npm run test-ci
     - npm i coveralls && export COVERALLS_GIT_COMMIT=`git rev-parse HEAD` && cat ./coverage/lcov.info | coveralls
